[gd_scene load_steps=10 format=2]

[ext_resource path="res://Menu/Menu.gd" type="Script" id=1]
[ext_resource path="res://Menu/MainMenu.tscn" type="PackedScene" id=2]
[ext_resource path="res://Menu/Credits/Credits.tscn" type="PackedScene" id=3]
[ext_resource path="res://Menu/Misc/ScreenFader.tscn" type="PackedScene" id=4]
[ext_resource path="res://Menu/Help/Help.tscn" type="PackedScene" id=5]
[ext_resource path="res://Menu/Misc/MenuSlime.tscn" type="PackedScene" id=6]
[ext_resource path="res://Menu/Setting/Setting.tscn" type="PackedScene" id=7]
[ext_resource path="res://Menu/Misc/MenuDashSlime.tscn" type="PackedScene" id=8]
[ext_resource path="res://Assets/Audios/TitleMusic.ogg" type="AudioStream" id=16]

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MenuSlime" parent="." instance=ExtResource( 6 )]

[node name="MenuDashSlime" parent="." instance=ExtResource( 8 )]

[node name="MainMenu" parent="." instance=ExtResource( 2 )]

[node name="Setting" parent="." instance=ExtResource( 7 )]
visible = false
margin_right = -0.00012207

[node name="Help" parent="." instance=ExtResource( 5 )]
visible = false

[node name="VBoxContainer" parent="Help/MarginContainer" index="0"]
margin_right = 1250.0
margin_bottom = 720.0

[node name="Credits" parent="." instance=ExtResource( 3 )]
visible = false

[node name="ScreenFader" parent="." instance=ExtResource( 4 )]
visible = false

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 16 )
autoplay = true
bus = "Music"
[connection signal="pressed" from="MainMenu/MarginContainer/VBoxContainer/CenterContainer3/VBoxContainer/PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="pressed" from="MainMenu/MarginContainer/VBoxContainer/CenterContainer3/VBoxContainer/HelpButton" to="." method="_on_HelpButton_pressed"]
[connection signal="pressed" from="MainMenu/MarginContainer/VBoxContainer/CenterContainer3/VBoxContainer/SettingButton" to="." method="_on_SettingButton_pressed"]
[connection signal="pressed" from="MainMenu/MarginContainer/VBoxContainer/CenterContainer3/VBoxContainer/CreditsButton" to="." method="_on_CreditsButton_pressed"]
[connection signal="pressed" from="MainMenu/MarginContainer/VBoxContainer/CenterContainer3/VBoxContainer/ExitButton" to="." method="_on_ExitButton_pressed"]
[connection signal="pressed" from="MainMenu/HBoxContainer/MusicButton" to="." method="_on_MusicButton_pressed"]
[connection signal="pressed" from="MainMenu/HBoxContainer/SFXButton" to="." method="_on_SFXButton_pressed"]
[connection signal="pressed" from="Setting/CloseButton" to="." method="_on_SettingCloseButton_pressed"]
[connection signal="pressed" from="Help/TextureButton" to="." method="_on_HelpCloseButton_pressed"]
[connection signal="pressed" from="Credits/TextureButton" to="." method="_on_CreditsCloseButton_pressed"]

[editable path="MainMenu"]

[editable path="Setting"]

[editable path="Help"]

[editable path="Credits"]
